gebruik van semantische elementen en fix overlap

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ p {
 
 h1 {
     font-size: 23px;
+    margin-top: 10px;
 }
 
 .blocks {
